# todoist

./: .env  .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8463de51aa7c_init_schemas.py  9fb7b69cb922_create_tasks_table.py
app/_core/: database.py
app/_shared/: constants.py
app/models/: category.py  task.py
app/repositories/: category.py  task.py
app/routers/: category.py  task.py
app/schemas/: category.py  task.py
app/services/: category.py  task.py
