[project]
name = "todoist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]
